--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,167 +1,84 @@
-.home-page .filter-bar {
-  position: sticky;
-  width: 250px;
-  padding: 15px;
-  top: 60px;
-}
-
-.home-page .filter-bar .fixed-div {
-  position: sticky;
-  top: 100px;
-}
-
 .home-page .content .sort-result-div {
-  width: calc(100% - 250px);
+  /* width: calc(100% - 230px); */
   position: sticky;
-  top: 74px;
-  height: 80px;
+  top: 65px;
+  height: 60px;
   width: 100%;
   z-index: 1;
   background: #fff;
-  padding: 20px 15px 15px 15px;
+  padding: 7px;
 }
 
 .home-page .content .sort-result-div .post-results {
   font-size: 14px;
+  padding-top: 27px;
+  margin-bottom: 0;
 }
 
 .home-page .content .sort-result-div .post-sort-by {
-  /* padding-top: 10px; */
   min-width: 100px;
 }
 .home-page .content .sort-result-div .post-sort-by label {
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .home-page .content .sort-result-div .post-sort-by div {
-  font-size: 13px;
+  font-size: 14px;
+}
+
+.sort-by-div {
+  display: block;
+  float: right;
 }
 
 .home-page .content {
-  width: calc(100% - 250px);
+  width: calc(100% - 230px);
+  min-height: 40vh;
+  padding: 0 15px;
 }
 
-.filter-list {
-  max-height: 267px;
-  overflow-y: auto;
+@media (max-width: 480px) {
+  .home-page .content {
+    padding: 0;
+  }
+
+  .home-page .content .sort-result-div {
+    padding: 7px 15px;
+  }
 }
 
-.filter-list .MuiListItem-dense {
-  padding: 0 10px !important;
-}
+@media (max-width: 768px) {
+  .home-page .content {
+    width: 100%;
+  }
 
-.filter-list .MuiListItem-dense {
-  height: 30px !important;
-  color: #565656 !important;
-}
+  .home-page .content .sort-result-div {
+    top: 65px;
+    height: 80px;
+  }
 
-.filter-list .MuiListItemIcon-root {
-  min-width: 35px;
-}
+  .home-page .content .sort-result-div .post-results {
+    padding-top: 14px;
+  }
 
-.filter-list .MuiCheckbox-colorSecondary.Mui-checked {
-  color: #c19d0d !important;
-}
-
-.clear-filters {
-  position: relative;
-  color: rgb(109, 109, 109);
-  font-size: 14px;
-  text-align: right;
-  margin-top: 0;
-  right: 10px;
-  cursor: pointer;
-}
-
-.clear-filters:hover {
-  color: #c19d0d;
-}
-
-.filter-title {
-  margin: 0 0 0 8px !important;
-  font-size: 16px !important;
-}
-
-.filter-divider {
-  margin: 15px 5px 20px 5px !important;
-}
-
-.filter-gender {
-  width: 35px;
-  border-radius: 50%;
-  padding: 10px;
-  margin-right: 15px;
-  margin-top: 18px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  border: 2px solid #b7b7b7;
-}
-
-.active-gender {
-  background: #c19d0d;
-  border: 2px solid #c19d0d;
-}
-
-.input-range {
-  width: 90%;
-  margin: auto;
-  margin-top: 35px;
-  margin-bottom: 55px;
-}
-
-.input-range__slider {
-  background: #c19d0d;
-  border: 1px solid #c19d0d;
-}
-
-.input-range__track--active {
-  background: #c19d0d;
-}
-
-.input-range__label {
-  color: #565656;
-  font-size: 14px;
-}
-
-.filter-radio-container {
-  max-height: 267px;
-  overflow-y: auto;
-}
-
-.filter-radio .MuiFormControlLabel-root {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.filter-radio .MuiFormControlLabel-root {
-  margin-left: 0;
-  margin-right: 0;
-  height: 30px !important;
-  color: #565656 !important;
-  font-size: 16px !important;
-}
-
-.filter-radio .MuiFormControlLabel-root:hover {
-  background: rgba(0, 0, 0, 0.04);
-}
-
-.filter-radio .MuiFormControlLabel-label {
-  font-size: 0.875rem !important;
-  padding-left: 8px;
-}
-
-.filter-radio .MuiRadio-colorSecondary.Mui-checked {
-  color: #c19d0d !important;
-}
-
-.close-filters {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 20px;
+  .sort-by-div {
+    margin-top: -14px;
+  }
 }
 
 .pagination-div {
   float: right;
-  padding: 0 15px;
+  padding: 0 15px 20px 15px;
+}
+
+[type="button"]:not(:disabled),
+[type="reset"]:not(:disabled),
+[type="submit"]:not(:disabled),
+button:not(:disabled):focus {
+  outline: 0 !important;
+}
+
+.MuiPaginationItem-page.Mui-selected {
+  background: #022431 !important;
+  color: #fff;
 }
